--- a/pages/Store/index.html
+++ b/pages/Store/index.html
@@ -7,11 +7,11 @@
   <meta name="author" content="" />
   <title>Gamer ShopU</title>
   <!-- Favicon-->
-  <link rel="icon" type="image/x-icon" href="/Store/favicon.png" />
+  <link rel="icon" type="image/x-icon" href="/pages/Store/favicongamer.png" />
   <!-- Bootstrap icons-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
   <!-- Core theme CSS (includes Bootstrap)-->
-  <link href="/Store/assets/css/styles.css" rel="stylesheet" />
+  <link href="/pages/Store/assets/css/styles.css" rel="stylesheet" />
 </head>
 <body>
   <!-- Navigation-->
